# attractor

./: AGENTS.md  README.md  pyproject.toml
demo/: README.md  pipeline.dot  run_demo.py
runs/Demo-1770726770/: checkpoint.json  manifest.json
runs/Demo-1770726770/gate/: status.json
runs/Demo-1770726770/implement/: prompt.md  response.md  status.json
runs/Demo-1770726770/review/: prompt.md  status.json
runs/Demo-1770726770/start/: status.json
src/attractor/: __init__.py  artifacts.py  backends.py  checkpoint.py  cli.py  conditions.py  context.py  dot_parser.py  engine.py  events.py  handlers.py  interviewer.py  model.py  outcome.py  stylesheet.py  transforms.py  utils.py  validator.py
src/attractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_pipeline.py
