[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attractor"
version = "0.1.0"
description = "DOT-based pipeline runner for AI workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Attractor Contributors" }]

dependencies = [
  "coding-agent",
  "unified-llm",
]

[project.scripts]
attractor = "attractor.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["attractor*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "B", "UP"]

[tool.ty]

[tool.uv.sources]
coding-agent = { path = "../coding-agent", editable = true }
unified-llm = { path = "../llm-client", editable = true }

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.15.0",
  "ty>=0.0.15",
]
